# mini-notes-llm

./: README.en.md  README.md  README.zh-CN.md  manifest.json  package-lock.json  package.json
.github/workflows/: release.yml
bundle/: index.html
bundle/assets/: index-BScAy4mw.css  index-DKw5Utph.js
executas/summarize/: executa.json  pyinstaller.spec  pyproject.toml  summarize_tool.py
fixtures/: mock-sampling.jsonl
frontend/: index.html  package-lock.json  package.json  style.css  vite.config.js
frontend/src/: main.js  storage.js  tools.js  ui.js
python/executa_sdk/: agent.py  sampling.py
python/tests/: test_storage_client.py
scripts/: package.py
